--- a/client/package.json
+++ b/client/package.json
@@ -12,7 +12,6 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
-    "eslint": "^9.15.0",
     "foundation-sites": "^6.9.0",
     "jquery": "^3.7.1",
     "react": "^18.3.1",
@@ -47,6 +46,7 @@
     ]
   },
   "devDependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "eslint": "^8.57.1"
   }
 }
