--- a/vercel.json
+++ b/vercel.json
@@ -17,11 +17,11 @@
   "routes": [
     {
       "src": "/api/(.*)", 
-      "dest": "/server/server.js"
+      "dest": "./server/server.js"
     },
     {
       "src": "/(.*)", 
-      "dest": "/client/build/$1"
+      "dest": "./client/build/$1"
     }
   ]
 }
