--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon api/server.js",
+    "start": "nodemon server.js",
     "build": "echo 'No build necessary for server'"
   },
   "keywords": [],
