--- a/server/vercel.json
+++ b/server/vercel.json
@@ -10,6 +10,10 @@
     {
       "src": "/(.*)",             
       "dest": "server.js"   
+    },
+    {
+      "src": "/Public/(.)",
+      "dest": "/Public/$1"
     }
   ]
 }
