--- a/server/.gitignore
+++ b/server/.gitignore
@@ -1,7 +1,7 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-
+/node_modules
 .env
 /.pnp
 .pnp.js
@@ -23,5 +23,7 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
+
+.vercel
 
 .vercel
