--- a/client/.env
+++ b/client/.env
@@ -1,1 +1,1 @@
-REACT_APP_API_URL = https://server-umber-delta.vercel.app || http://localhost:8000
+REACT_APP_API_URL = https://server-umber-delta.vercel.app
